--- a/content/post/2020-06-18-the-way-i-solved-syngenta-challenge-2020.Rmd
+++ b/content/post/2020-06-18-the-way-i-solved-syngenta-challenge-2020.Rmd
@@ -1,13 +1,11 @@
 ---
-title: "The way I solved Syngenta Challenge 2020"
-author: "Omer Perach"
-date: '2020-06-18'
+title: Syngenta Challenge 
+author: Omer Perach
+date: '2020-06-15'
+slug: plant-genomic-selection
+categories: []
+tags: []
 description: ''
-slug: the-way-i-solved-syngenta-challenge-2020
-tags: Data Science
-categories:
-- Plant Science
-- Big Data
 topics: []
 ---
 
