--- a/content/post/2020-07-06-pre-seed-early-stage-saas-startup-business-modeling.Rmd
+++ b/content/post/2020-07-06-pre-seed-early-stage-saas-startup-business-modeling.Rmd
@@ -134,7 +134,7 @@ type = "b")
 npv <- sum(discounted.cash.flow)
 ```
 
-**Net Present Value is `{r} npv`**
+**Net Present Value is** `r npv`
 
 ## Pro Forma Table
 
