--- a/public/post/2020-07-06-pre-seed-early-stage-saas-startup-business-modeling.tex
+++ b/public/post/2020-07-06-pre-seed-early-stage-saas-startup-business-modeling.tex
@@ -123,13 +123,13 @@ true for the plant breeding industry, huge amount of data is recorded
 and collected - genotype, phenotype, environmental etc. Before inferring
 and analyzing the data, it should be transformed into findable,
 available, identifiable, reusable database. GenoSee is a one stop shop
-for all the breeding program associates in which let them focus in their
-job - developing elite crops - while letting GenoSee handle the data
-related work. GenoSee estimate that it will reach 50 paying breeding
-programs worldwide during the first four years. GenoSee is asking for
-\textbf{\$1M} dollars for the first phase of development and
+for all the breeding program associates which let them focus in
+achieving their goal - developing elite crops - while letting GenoSee
+handle the data related work. GenoSee estimate that it will reach 50
+paying breeding programs worldwide during the next four years. We are
+asking for \textbf{\$1M} dollars for the first phase of development and
 \textbf{\$500K} for the second phase of devlopment. Following our
-assumptions we calculte positive \textbf{NPV}.
+assumptions we calculte a potential positive \textbf{NPV}.
 
 \hypertarget{assumptions}{%
 \subsection{Assumptions}\label{assumptions}}
@@ -138,11 +138,11 @@ assumptions we calculte positive \textbf{NPV}.
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Thousands open plant breeding programs worldwide.
+  Thousands of open plant breeding programs worldwide.
 \item
-  Phase 1 one year to MVP and reaching first customers.
+  Phase 1 - one year to MVP and reaching first customers.
 \item
-  Phase 2 one year for improvement and growth.
+  Phase 2 - one year for improvement and growth.
 \item
   We will look on the next 7 years.
 \item
@@ -154,6 +154,11 @@ assumptions we calculte positive \textbf{NPV}.
 \item
   During the next four years we will reach 50 breeding programs (to our
   opinion it is a conservative aproach).
+\item
+  GenoSee will charge 15000 dollars for building the database abd
+  additional 300 dollars per user monthly.
+\item
+  GenoSee estimating average of 10 users per breeding program.
 \end{enumerate}
 
 \hypertarget{capex-block}{%
@@ -220,7 +225,7 @@ against taxable profit .
 \hypertarget{sales-and-revenue-block}{%
 \subsection{Sales and Revenue Block}\label{sales-and-revenue-block}}
 
-We assume that it will take us 3 years after end of phase 1 to reach 100
+We assume that it will take us 3 years after end of phase 1 to reach 50
 breeding programs worldwide. We will price (assumption) the software to
 be 15000 dollars per year and additional subscription price per user of
 300 dollars per month. We estimate that each program will have 5 users
