--- a/content/post/2021-08-24-proof-of-concept-or-illus-world-food-studied-crop-model-for-israeli-wheat/index.Rmd
+++ b/content/post/2021-08-24-proof-of-concept-or-illus-world-food-studied-crop-model-for-israeli-wheat/index.Rmd
@@ -12,3 +12,35 @@ tags:
 description: ''
 topics: []
 ---
+
+## What is WOFOST?
+
+WOFOST is a simulation model for the quantitative analysis of the growth and production of annual field crops [Please read](https://www.wur.nl/en/show/A-gentle-introduction-to-WOFOST.htm).  WOFOST could basically help us to understand the dynamic of the plant biological features such as **Leaf area index**, **Biomass**, **Water use**, **Yield** etc. for a location given knowledge about soil, crop, weather and crop management. 
+
+## Application of WOFOST
+
+* yield risk and inter- annual yield variability.
+* yield variability over soil types, or over a range of agro-hydrological conditions.
+* fifferences among cultivars.
+* relative importance of growth determining factors.
+* Many more
+
+## My plan
+
+WOFOST is a huge and amazing project and I am on the very early stage of learning it. Nonetheless, I believe in learning from doing so I decided to try and take a new R package *Rwofost* and use it. This R package trying to implement the WOFOST model in the R environment. It is worth mentioning that their is a python shell that are more suitable to work with that model [Please read](https://pcse.readthedocs.io/en/stable/).
+
+## What parameters the package functions need to recieve?
+
+The mandatory variables for the functions are:
+* crop - which crop I want to model. from a list.
+* whether - weather data set with the following parameters:
+  - date-"Date" class variable in R.
+  - srad-Solar radiation kJ m^-2 day^-1.
+  - tmin-minimum temperature per day (degrees C).
+  - tmax-maximum temperature per day (degrees C).
+  - vapr-vapor pressure. 
+  - wind-wind speed.
+  - prec-precipitation.
+  
+  
+
