--- a/content/post/2021-08-24-proof-of-concept-or-illus-world-food-studied-crop-model-for-israeli-wheat/index.Rmd
+++ b/content/post/2021-08-24-proof-of-concept-or-illus-world-food-studied-crop-model-for-israeli-wheat/index.Rmd
@@ -46,10 +46,19 @@ The mandatory variables for the functions are:
 
 ## First stage - single station
 
-In the first stage I will only collect data for a single station. I decided to focus in a data from a station called *Newe Ya'ar*. The station located near a small vilage called *Ramat Yishai*. The reason I am choosing to work on this station:
+In the first stage I will only collect data for a single station. I decided to focus in a data from a station called *Gilat*. The station located near a small toen called *Ofakim*. The reasons I am choosing to work on this station are:
 
 * The soil type in that reason is clay.
 * The area is good representative of a place with annual field crops.
+* I have a knowledge on chickpea development grown over there on 2021 season.
+
+# The data from the station
+
+```{r}
+df<-read.csv("weather_data.csv")
+head(df)
+```
+
 
   
   
