--- a/content/post/2021-08-24-proof-of-concept-or-illus-world-food-studied-crop-model-for-israeli-wheat/index.Rmd
+++ b/content/post/2021-08-24-proof-of-concept-or-illus-world-food-studied-crop-model-for-israeli-wheat/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Proof of concept or illusions? WOrld FOod STudied crop model for Israeli wheat"
+title: "Proof of concept or illusions? WOrld FOod STudied crop model for Israeli Chickpea"
 author: "Omer Perach"
 date: '2021-08-24'
 slug: []
@@ -52,7 +52,7 @@ In the first stage I will only collect data for a single station. I decided to f
 * The area is good representative of a place with annual field crops.
 * I have a knowledge on chickpea development grown over there on 2021 season.
 
-# The data from the station
+## The data from the station
 
 ```{r}
 df<-read.csv("weather_data.csv")
